# work-time-tracker

./: .gitignore  pyproject.toml
work_time_tracker/: main.py
work_time_tracker/core/: session.py  session_manager.py
work_time_tracker/ui/: main.ui  main_window.py  qt_main_window.py
